--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
 
 <head>
     <meta charset=utf-8/>
+
+    <title>ic-07</title>
+
+    <!-- link stylesheet -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- link d3 -->
+    <script src="d3.v6.1.1/d3.min.js"></script>
+
 </head>
 
 
 <body>
+    <h1>D3 Part 1</h1>
 
+    <div id="numline"></div>
+
+    <div id="dp2"></div>
+    <div id="dp3"></div>
+    <div id="dp4"></div>
+    <div id="dp5"></div>
+
+    <!-- link js -->
+    <script src="main.js"></script>
 
 </body>
 
